Update gradio app

--- a/Week03/MaskData/MaskClassifierInference_TeachableMachine_GradioAppInference.ipynb
+++ b/Week03/MaskData/MaskClassifierInference_TeachableMachine_GradioAppInference.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [
-        "xjwjVwTm_etm",
         "eOEWlXjy9FfR"
       ]
     },
@@ -514,6 +513,7 @@
         "from keras.models import load_model\n",
         "from PIL import Image, ImageOps\n",
         "import numpy as np\n",
+        "import time\n",
         "\n",
         "# Disable scientific notation for clarity\n",
         "np.set_printoptions(suppress=True)\n",
@@ -525,52 +525,55 @@
         "class_names = open(\"kerasTeachableMachineModel/labels.txt\", \"r\").readlines()\n",
         "\n",
         "\n",
-        "def predict_image_class(image: np.ndarray, submit: bool):\n",
-        "    if submit:\n",
-        "        # Save the image to disk\n",
-        "        Image.fromarray(image).save(\"saved_image.jpg\")\n",
+        "def predict_image_class(image: np.ndarray):\n",
+        "    # Save the image to disk\n",
+        "    timestamp = int(time.time())\n",
+        "    filename = f\"saved_image_{timestamp}.jpg\"\n",
+        "    Image.fromarray(image).save(filename)\n",
         "\n",
-        "        data = np.ndarray(shape=(1, 224, 224, 3), dtype=np.float32)\n",
+        "    # Re-read the saved image from disk\n",
+        "    image = Image.open(filename)\n",
         "\n",
-        "        # Ensure the image is RGB format\n",
-        "        image = ImageOps.fit(image, (224, 224), Image.Resampling.LANCZOS)\n",
+        "    data = np.ndarray(shape=(1, 224, 224, 3), dtype=np.float32)\n",
         "\n",
-        "        # Convert image to a numpy array\n",
-        "        image_array = np.asarray(image)\n",
+        "    # Ensure the image is RGB format\n",
+        "    image = ImageOps.fit(image, (224, 224), Image.Resampling.LANCZOS)\n",
         "\n",
-        "        # Normalize the image\n",
-        "        normalized_image_array = (image_array.astype(np.float32) / 127.5) - 1\n",
+        "    # Convert image to a numpy array\n",
+        "    image_array = np.asarray(image)\n",
         "\n",
-        "        # Load the image into the array\n",
-        "        data[0] = normalized_image_array\n",
+        "    # Normalize the image\n",
+        "    normalized_image_array = (image_array.astype(np.float32) / 127.5) - 1\n",
         "\n",
-        "        # Run prediction\n",
-        "        prediction = model.predict(data)\n",
-        "        index = np.argmax(prediction)\n",
-        "        class_name = class_names[index]\n",
-        "        confidence_score = prediction[0][index]\n",
+        "    # Load the image into the array\n",
+        "    data[0] = normalized_image_array\n",
         "\n",
-        "        return f\"Class: {class_name}\\nConfidence Score: {confidence_score}\"\n",
-        "    else:\n",
-        "        return \"Submit the image to get the prediction.\"\n",
+        "    # Run prediction\n",
+        "    prediction = model.predict(data)\n",
+        "    index = np.argmax(prediction)\n",
+        "    class_name = class_names[index]\n",
+        "    confidence_score = prediction[0][index]\n",
+        "\n",
+        "    return f\"Class: {class_name}\\nConfidence Score: {confidence_score}\"\n",
         "\n",
         "\n",
         "iface = gr.Interface(\n",
         "    fn=predict_image_class,\n",
-        "    inputs=[gr.inputs.Image(shape=(224,224), source=\"webcam\"), gr.inputs.Checkbox(label=\"Submit\")],\n",
+        "    inputs=gr.inputs.Image(shape=(224,224), source=\"webcam\"),\n",
         "    outputs=\"text\"\n",
         ")\n",
         "\n",
-        "iface.launch()\n"
+        "iface.launch()\n",
+        "\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Yfa5Mi2MAeKe",
-        "outputId": "58a24a1f-1a38-4102-9713-e508f98a8437"
+        "outputId": "d0b48a89-c30d-4fa8-b682-02373b44d050"
       },
-      "execution_count": 24,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -602,15 +605,69 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "S4Yj9enSAlte",
-        "outputId": "95561281-9475-4ae5-977b-985e55e551ff"
+        "outputId": "22850831-6c2c-412e-c1fe-fa975503cd37"
       },
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "2023-07-28 19:42:04.835562: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+            "2023-07-28 19:50:35.572435: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
+            "/content/gradioApp.py:51: GradioDeprecationWarning: Usage of gradio.inputs is deprecated, and will not be supported in the future, please import your component from gradio.components\n",
+            "  inputs=gr.inputs.Image(shape=(224,224), source=\"webcam\"),\n",
+            "/content/gradioApp.py:51: GradioDeprecationWarning: `optional` parameter is deprecated, and it has no effect\n",
+            "  inputs=gr.inputs.Image(shape=(224,224), source=\"webcam\"),\n",
+            "Running on local URL:  http://127.0.0.1:7860\n",
+            "\n",
+            "To create a public link, set `share=True` in `launch()`.\n",
+            "1/1 [==============================] - 2s 2s/step\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/gradio/routes.py\", line 442, in run_predict\n",
+            "    output = await app.get_blocks().process_api(\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/gradio/blocks.py\", line 1392, in process_api\n",
+            "    result = await self.call_function(\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/gradio/blocks.py\", line 1097, in call_function\n",
+            "    prediction = await anyio.to_thread.run_sync(\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/anyio/to_thread.py\", line 33, in run_sync\n",
+            "    return await get_asynclib().run_sync_in_worker_thread(\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/anyio/_backends/_asyncio.py\", line 877, in run_sync_in_worker_thread\n",
+            "    return await future\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/anyio/_backends/_asyncio.py\", line 807, in run\n",
+            "    result = context.run(func, *args)\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/gradio/utils.py\", line 703, in wrapper\n",
+            "    response = f(*args, **kwargs)\n",
+            "  File \"/content/gradioApp.py\", line 21, in predict_image_class\n",
+            "    Image.fromarray(image).save(filename)\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/PIL/Image.py\", line 3069, in fromarray\n",
+            "    arr = obj.__array_interface__\n",
+            "AttributeError: 'NoneType' object has no attribute '__array_interface__'\n",
+            "1/1 [==============================] - 0s 48ms/step\n",
+            "1/1 [==============================] - 0s 39ms/step\n",
+            "1/1 [==============================] - 0s 38ms/step\n",
+            "Keyboard interruption in main thread... closing server.\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/gradio/blocks.py\", line 2133, in block_thread\n",
+            "    time.sleep(0.1)\n",
+            "KeyboardInterrupt\n",
+            "\n",
+            "During handling of the above exception, another exception occurred:\n",
+            "\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/content/gradioApp.py\", line 55, in <module>\n",
+            "    iface.launch()\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/gradio/blocks.py\", line 2049, in launch\n",
+            "    self.block_thread()\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/gradio/blocks.py\", line 2137, in block_thread\n",
+            "    self.server.close()\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/gradio/networking.py\", line 49, in close\n",
+            "    self.thread.join()\n",
+            "  File \"/usr/lib/python3.10/threading.py\", line 1096, in join\n",
+            "    self._wait_for_tstate_lock()\n",
+            "  File \"/usr/lib/python3.10/threading.py\", line 1116, in _wait_for_tstate_lock\n",
+            "    if lock.acquire(block, timeout):\n",
+            "KeyboardInterrupt\n",
+            "^C\n"
           ]
         }
       ]
